[tool.poetry]
name = "rrpmpkg"
version = "0.1.0"
description = ""
authors = ["pybash1 <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
rich = "^12.4.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
